@@ -159,7 +159,7 @@ function kickPlayer(pNum) {
     if (ifmt.pln !== game.hostNum) return; // can only kick if host
     if (ifmt.pln === pNum) return; // can't kick self
     if (!game.playerList[pNum]) return; // player doesn't exist
-    conn.send(JSON.stringify({type:"waiting:kick",payload:{n:pNum}}));
+    conn.send(JSON.stringify({type:"game:kick",payload:{n:pNum}}));
 }
 /**
  * @param {string} sId
@@ -359,6 +359,13 @@ conn.addEventListener("open", async function(event) {
                 }
                 break;
             }
+            case "account:isbot":{
+                const n = data.payload["n"];
+                /**@type {string} */
+                const a = data.payload["a"];
+                setJListPlayerBot(n, a);
+                break;
+            }
             case "waiting:promote":{
                 if (game.hostNum) {
                     const c = document.getElementById(`JLIST-player-${game.hostNum}`);
@@ -381,7 +388,7 @@ conn.addEventListener("open", async function(event) {
                 createBanner({type:"info",content:`Game started`});
                 break;
             }
-            case "waiting:kick":{
+            case "game:kick":{
                 let n = data.payload["n"];
                 if (typeof n === "number") {
                     if (ifmt.pln === n) {
